[gd_scene load_steps=3 format=3 uid="uid://0rgotk0smyxh"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_5lyv8"]

[sub_resource type="SystemFont" id="SystemFont_n0j8j"]
font_names = PackedStringArray("Arial")
font_italic = true
font_weight = 700
subpixel_positioning = 0

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5lyv8")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -178.5
offset_top = 50.0
offset_right = 178.5
offset_bottom = 107.0
grow_horizontal = 2

[node name="Title" type="Label" parent="Panel/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = SubResource("SystemFont_n0j8j")
theme_override_font_sizes/font_size = 50
text = "TestCar3D"
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -103.0
offset_top = -79.0
offset_right = 103.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../SettingsButton")
theme_override_font_sizes/font_size = 30
text = "Resume"

[node name="SettingsButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ResumeButton")
focus_neighbor_bottom = NodePath("../Exit")
theme_override_font_sizes/font_size = 30
text = "Settings"

[node name="Exit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../SettingsButton")
theme_override_font_sizes/font_size = 30
text = "Exit
"

[connection signal="pressed" from="Panel/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
